--- a/contactos.html
+++ b/contactos.html
@@ -59,12 +59,12 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="nosotros.html">
+                    <a class="nav-link link text-white display-4" href="eventos.html">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
@@ -185,7 +185,7 @@
             <div class="form-1 col-sm-12 col-md-5 col-xl-4 col-lg-3" data-form-type="formoid">
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Fr7Zi4XpPhi2ML1J1GF1JzEMev5MG5xJ3K4XqGF/XroiRk9YR3L/VQDUZFe2vSzOw2ZuBMNGuOPhpMNbtLfn8O3GlzjZbCdY5mW3uyiHLVXTOLbLUVsO5404cFi6IcD6" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UCUDoKZAu1ZSfrX/giwDHBvZK7T9TrnG/OnfwoBNqliFYgCUeP05GvpcNs7RmLDPCllGnr3AT9vHSjwwsLz1IQ6EjOJqejPYsEc8kBC5Z/h+pxmiKbEjWH4ZijJnTyzi" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer4-r">
                     </div>
