--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="nosotros.html">
+                    <a class="nav-link link text-white display-4" href="eventos.html">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
@@ -214,7 +214,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nUOH7+mzyD0fw8+iIoUBcj5UsOTouMjTHrsrlPNqIiqUdMdGfQanIEiYT48dZWtODg6tszdOXOi0wt+ofLeMW1eujewMmfDHBFQaCNp4m3SXXp9shLmFrCdIgquRvCZj" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YV3Vlgdac6FqCsnxGxXdpOnLxSBtF9s6f4izPy2WzC9/PdGQTB/4+aliTyyGwpn7g8EQDHZVwMIWY/h59bB4UzM03ff5QR6hvR0sxRSWrIVa04NzWqmIjb+9WqNWuEW7" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
