--- a/ofertas.html
+++ b/ofertas.html
@@ -60,12 +60,12 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="nosotros.html">
+                    <a class="nav-link link text-white display-4" href="eventos.html">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
@@ -182,7 +182,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L0AkJkamWm3Eb0Sm+Sr4SWSY+g3lGJ0P5JsE5HUGzTCW96O0y32uN21Wl5zC9Fu6z+aGgBY7npiYyd8kXHL0HP7zmU4Chnv0ipmgahzyAX260c9hoteRKDVpnL+oAVSM" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sa0uH2tyFZbkSBJGaYgUnJ5qTcEo5kN+wHiX7AKaCf4zToN3wczGfDR9ZPX2ZMnkJfuH7mwaoUYJk1vjZULn0ZYu20c/WXaBSCJ++meFTGtgL7y2V1RJUYlTJTzZcZxB" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-17">
                     </div>
