--- a/eventos.html
+++ b/eventos.html
@@ -59,12 +59,12 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contactos.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="eventos.html">
+                    <a class="nav-link link text-white display-4" href="ofertas.html">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
@@ -85,7 +85,7 @@
               </a>
               
             </div>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="contactos.html">CONTACTANOS</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="nosotros.html">CONTACTANOS</a></div>
       </div>
     </nav>
 </section>
@@ -159,7 +159,7 @@
                 </div>
                 
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bnWXpv/XL/tLcE0aFnCquRqv/IiobA4KtqXSBICF4Eabn6O8yYeSNaKpXZX77bJTKCZkDYpulv/ofaRvo11RrcMj9ua8HrDNvt20yQeDvcXBTRbRGRlvoKpPbxLHYmcZ" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="elWmVPezNuc1+tHE6gv88Q0keL7aTXyEvyIcXqPJSmsjDcglpr3oJmrAhywEsFRBgmYF2uWdaE3zgrWH9MnVtdxisS3BxpShKMOnhXqJK+2pZ78xA8mVUfZBuPv92Ge+" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-form2-k">
                     </div>
