--- a/nosotros.html
+++ b/nosotros.html
@@ -59,12 +59,12 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contactos.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="eventos.html">
+                    <a class="nav-link link text-white display-4" href="ofertas.html">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
@@ -85,7 +85,7 @@
               </a>
               
             </div>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="contactos.html">CONTACTANOS</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="nosotros.html">CONTACTANOS</a></div>
       </div>
     </nav>
 </section>
@@ -321,7 +321,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eBs1tueB0wJz5RGGw0dD9Uaq7STtGP1h4mltHbTB9EVE80gPynnbi3tNg+YllS+b79KKmSI8XcmpQJvmLsC8Eo+qNx+nFdGu8PhYJtcCYJ9u8/squHo/YnqUs77KerAh" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oJQukT1mPTsqp80VK7ketf/fgDOQ1w6wbSdmo22jvLPhIemj8eydVVfUUJZtoBa/6XgRiT19WdN0DHQeex7PR1WWC9wA29DtzJFiAyM5rJaPDPF9pEEtY64jL3coGUhG" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-12">
                     </div>
