--- a/contactos.html
+++ b/contactos.html
@@ -59,12 +59,12 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contactos.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="ofertas.html">
+                    <a class="nav-link link text-white display-4" href="eventos.html">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
@@ -85,7 +85,7 @@
               </a>
               
             </div>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="nosotros.html">CONTACTANOS</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="https://espressarcafe.github.io/contactos.html">CONTACTANOS</a></div>
       </div>
     </nav>
 </section>
@@ -185,7 +185,7 @@
             <div class="form-1 col-sm-12 col-md-5 col-xl-4 col-lg-3" data-form-type="formoid">
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w5YG4sGhBCo8/GcbxBcI/CvooVfliFra1lwB7wLSxmRRylSMKc40ctGzaGQY1P4IwgIsloZhDaskNdImsQv1U62Mq/OKn8zejHCpxxfDUto95N9k1HfVNhs9cmCq8hYn" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="glDb9m64xRY45P9G4BSPpvep09RG1LUo8bS9QwgZuEFsWkZCs0YI18qXsant7A/eBA4HPfaNIyBtj98wPLfDFGySW1hpv5L0Q8ClC64F8Ai7mwZh5r/gO5ErlZlBs2/w" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer4-r">
                     </div>
