--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contactos.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="ofertas.html">
+                    <a class="nav-link link text-white display-4" href="eventos.html">
                         NOSOTROS</a>
                 </li></ul>
             <div class="icons-menu">
@@ -86,7 +86,7 @@
               </a>
               
             </div>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="nosotros.html">CONTACTANOS</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="https://espressarcafe.github.io/contactos.html">CONTACTANOS</a></div>
       </div>
     </nav>
 </section>
@@ -214,7 +214,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sbULVSBVCrokfuvLXiEmz1Revhtb02ED0tVUQgCs62H7Idg9lS4fUG2zYzl7y7j1+yhZmaxy9Aokyuofs8ME9UViN+u5f+sPJG/47mJOVBDg8jYDsG/y3IU6yilKmpyt" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2nNhe42rGgppnq0AJtw0pS2A7FmueFrkIJbnoXxDma+vHV99POG754TCLIkaWLbrle4kYOD0YMYonz7ks2LWBmBYUvITruLKQTdxt/Bw2n1EX9SjAIMyVLjFo3DgI0xA" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
