--- a/menu.html
+++ b/menu.html
@@ -59,14 +59,14 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/ofertas.html">OFERTAS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="nosotros.html">
                         NOSOTROS</a>
-                </li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page6.html">NOTICIAS</a></li></ul>
             <div class="icons-menu">
               <a href="https://www.google.com.gt/maps/place/14%C2%B041'12.1%22N+90%C2%B038'45.4%22W/@14.686688,-90.6465576,318m/data=!3m2!1e3!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d14.6866877!4d-90.6459384?hl=es-419" target="_blank">
                 <span class="p-2 mbr-iconfont mbrib-pin" style="color: rgb(255, 255, 255);"></span>
@@ -1090,7 +1090,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FG+qw9NvE0+IQKyKLUUJGzd78KSnG2hMmZkguq6h5EHLzCE7HN22to4B9oS2lA2ncWBP/KnxysTHSpRfiSN5Qg9tg38SZQ+pDRbzUkAU07cTZ1Oc/Z1WmGgcKsJ0wNco" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JlgaCWAAmbVj3buNNdfKCLG6+oXLp4BpAcr+DrFhpCHA5+U9vdbh4biFRwQIFfTfushS8obDx9umRD6A4QQEy3Aq8izGQxgbnXTNboiykIsHIBL/JlaXanIaRD6XKVJk" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-l">
                     </div>
