--- a/ofertas.html
+++ b/ofertas.html
@@ -65,9 +65,9 @@
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/nosotros.html">
+                    <a class="nav-link link text-white display-4" href="nosotros.html">
                         NOSOTROS</a>
-                </li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page6.html">NOTICIAS</a></li></ul>
             <div class="icons-menu">
               <a href="https://www.google.com.gt/maps/place/14%C2%B041'12.1%22N+90%C2%B038'45.4%22W/@14.686688,-90.6465576,318m/data=!3m2!1e3!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d14.6866877!4d-90.6459384?hl=es-419" target="_blank">
                 <span class="p-2 mbr-iconfont mbrib-pin" style="color: rgb(255, 255, 255);"></span>
@@ -86,7 +86,7 @@
               </a>
               
             </div>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="nosotros.html">CONTACTANOS</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="contactos.html">CONTACTANOS</a></div>
       </div>
     </nav>
 </section>
@@ -181,7 +181,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lm3wwwmWNiVcp4qblZFTISZvdU7WPfLtNgvVZmy2Jy3YrcM95ptrd/WoU/tFeUwIps8wlx0cmjUMCIGgZSA3vXzMJea5ErSxfsxgXArBXVjqhQeElu5MSJoZI1Ib/4B6" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CgZ8H/iWWJ7Uc6yA1QmmQYbZinX1i/0Yv6dp0UPCXi+rc1xWUUpzmPTTsl3yvkV4WNqcp2ZoR9aBqnkqwNohPb1P3T0Hk10Kjp27pbphzTRupOkRDCtfYsvnvoU/fAwa" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-17">
                     </div>
